--- a/Hello.html
+++ b/Hello.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hello World</title>
 </head>
-<body>
     
+<body>
+    <h1>Hello Word</h1>
+    <h2>Nama Saya Akun Hafizh-Alif</h2>
+    <h2>Ini update file html</h2>
 </body>
 </html>
